# django-mptt

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.py
mptt/: __init__.py  managers.py  models.py  utils.py
tests/myapp/: tests.py
