[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "muckrack-django-mptt"
module = "mptt"
author = "Michał Domanski, Lee Semel, Craig de Stigter"
author-email = "dev@muckrack.com"
description-file = "README.rst"
requires = [
    "django",
    "django-js-asset"
]

[tool.black]
fast = true
line-length = 119
skip-string-normalization = true
skip-numeric-underscore-normalization = true
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
)/
'''
